--- a/codenames/public/index.html
+++ b/codenames/public/index.html
@@ -26,6 +26,7 @@
     -->
     <title>React App</title>
     <h1>Codenames</h1>
+    <h2>Hopeufully this works</h2>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
