design for game page. The cards will probably have to be modified since thejavascript portion will change them. The colors and text could be improved.

--- a/codenames/public/index.html
+++ b/codenames/public/index.html
@@ -26,6 +26,7 @@
     -->
     <title>Codenames</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link href='https://fonts.googleapis.com/css?family=Prosto One' rel='stylesheet'>
   </head>
   <body>
 
